# cat12_app

./: .dockerignore  .gitignore  Dockerfile  README.md  env.yml  pyproject.toml
.github/workflows/: build-and-publish.yml
src/cat12_app/: cat12_app.py  utils.py
src/cat12_app/data/: batch.m  run_spm12.sh
src/cat12_app/flows/: cat.py
tools/: run
